--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
 $c-gray: #eee;
+
+$color-blue: #05c2df;
+$color-black: #05040b;
+$color-grey-dark: #2f2f2f;
+$color-grey-light: #929292;
+$color-white: #fff;
+
+$bg-gradient: linear-gradient(100.83deg, #191536 0.67%, #000 100%);
