--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,7 @@
+/* stylelint-disable value-keyword-case */
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
+  font-family: Inter;
+  src: Inter;
+  font-weight: 400;
   font-style: normal;
 }
