--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,27 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: 900;
+  font-size: 4.6rem;
+  line-height: 130%;
+}
+
+%h2 {
+  font-weight: 900;
+  font-size: 3.6rem;
+  line-height: auto;
+}
+
+%h3 {
+  font-weight: 900;
+  font-size: 1.6rem;
+  line-height: auto;
+}
+
+%text-1 {
+  font-size: 16px;
+  line-height: 150%;
+}
+
+%text-2 {
+  font-size: 14px;
+  line-height: auto;
 }
