--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -5,3 +5,10 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: Quantum;
+  src: url(../fonts/Quantum-400.otf) format("otf");
+  font-weight: 400;
+  font-style: normal;
+}
