--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: Quantum;
-  src: url(../fonts/Quantum-400.otf) format("otf");
+  src: url(../fonts/Quantum-400.otf);
   font-weight: 400;
   font-style: normal;
 }
