--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -19,12 +19,12 @@
 }
 
 %text-1 {
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 150%;
 }
 
 %text-2 {
-  font-size: 14px;
+  font-size: 1.4rem;
   line-height: auto;
 }
 
