added security padding to the ._container class

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -19,6 +19,7 @@ body {
   max-width: 1452px;
   margin: 0 auto;
   box-sizing: content-box;
+  padding: 0 15px;
 }
 
 ///////////////////////////////////////////
