--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,6 +92,9 @@ body {
   &__content-wrapper {
     position: relative;
 
+    & > * {
+      margin-left: 8.6rem;
+    }
   }
 
   &__background-image {
@@ -105,6 +108,7 @@ body {
     font-size: 5.4rem;
     line-height: 129%;
     margin-bottom: 3.5rem;
+    margin-left: 0;
   }
 
   &__span {
