--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -31,3 +31,13 @@
 %text-custom {
   font-family: Quantum;
 }
+
+%triangle {
+  width: 9px;
+  height: 6px;
+  background-color: $color-blue;
+  clip-path: polygon(50% 0, 100% 100%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(50% 0, 100% 100%, 100% 100%, 0 100%);
+  -moz-clip-path: polygon(50% 0, 100% 100%, 100% 100%, 0 100%);
+  transform: rotate(-180deg);
+}
