--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -2,7 +2,12 @@
 html {
   font-family: Inter;
   font-weight: 400;
+
   font-size: 62.5%;
+
+  @media only screen and (max-width: 1280px) {
+    font-size: 50%;
+  }
 }
 
 body {
