--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -422,3 +422,65 @@ body {
   }
 }
 ////////////////////////////////////////////
+
+//////////////////////////////////////////
+/// PAGE
+
+.page {
+  display: flex;
+  flex-direction: column;
+}
+
+/////////////////////////////////////////
+
+///////////////////////////////////////////
+/// ADVENTAGES
+
+.adventages {
+  padding: 15.8rem 0;
+  background-color: $color-black;
+
+  &__title {
+    margin-bottom: 1.6rem;
+  }
+
+  &__subtitle {
+    text-align: center;
+    color: $color-blue;
+    margin-bottom: 7rem;
+  }
+
+  &__list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &__adventage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &:not(:last-child) {
+      margin-right: 20px;
+    }
+  }
+}
+
+.adventage {
+  &__icon {
+    margin-bottom: 21px;
+  }
+  
+  &__title {
+    margin-bottom: 20px;
+  }
+  
+  &__text {
+    max-width: 348px;
+    text-align: center;
+    color: $color-grey-light;
+  }
+}
+
+////////////////////////////////////////////
