--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -440,26 +440,65 @@ body {
   padding: 15.8rem 0;
   background-color: $color-black;
 
+  @media only screen and (max-width: 1280px) {
+    padding: 12.5rem 0;
+  }
+
+  @media only screen and (max-width: 768px) {
+    padding: 8.75rem 0;
+  }
+
+  @media only screen and (max-width: 430px) {
+    padding: 6.25rem 0;
+  }
+
   &__title {
     margin-bottom: 1.6rem;
+
+    @media only screen and (max-width: 430px) {
+      text-align: left;
+    }
   }
 
   &__subtitle {
     text-align: center;
     color: $color-blue;
     margin-bottom: 7rem;
+
+    @media only screen and (max-width: 768px) {
+      font-size: 12px;
+    }
+
+    @media only screen and (max-width: 430px) {
+      margin-bottom: 3.75rem;
+    }
+
+    @media only screen and (max-width: 430px) {
+      text-align: left;
+    }
   }
 
   &__list {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+
+    @media only screen and (max-width: 430px) {
+      justify-content: flex-start;
+    }
   }
 
   &__adventage {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    margin-bottom: 40px;
+
+    @media only screen and (max-width: 430px) {
+      align-items: flex-start;
+      margin-bottom: 20px;
+    }
 
     &:not(:last-child) {
       margin-right: 20px;
@@ -470,16 +509,54 @@ body {
 .adventage {
   &__icon {
     margin-bottom: 21px;
+
+    @media only screen and (max-width: 430px) {
+      display: none;
+    }
   }
   
   &__title {
     margin-bottom: 20px;
+
+    @media only screen and (max-width: 768px) {
+      font-size: 18px;
+    }
+
+    @media only screen and (max-width: 430px) {
+      font-size: 16px;
+    }
   }
   
   &__text {
     max-width: 348px;
     text-align: center;
     color: $color-grey-light;
+
+    @media only screen and (max-width: 1280px) {
+      max-width: 250px;
+      font-size: 2rem;
+    }
+
+    @media only screen and (max-width: 768px) {
+      max-width: 340px;
+    }
+
+    @media only screen and (max-width: 430px) {
+      max-width: 280px;
+      max-height: 52px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      text-align: start;
+
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+
+      &::after {
+        content: "...";
+        display: inline;
+      }
+    }
   }
 }
 
