--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -60,6 +60,41 @@ h3 {
   }
 }
 
+.section-title-custom {
+  @media only screen and (max-width: 768px) {
+    font-size: 21px;
+  }
+
+  span {
+    font-family: Quantum;
+    font-weight: 400;
+    font-size: 3.6rem;
+    line-height: 122%;
+    color: $color-blue;
+
+    @media only screen and (max-width: 768px) {
+      font-size: 21px;
+    }
+  }
+}
+
+.section-title {
+  @media only screen and (max-width: 768px) {
+    font-size: 21px;
+  }
+
+  span {
+    font-weight: 400;
+    font-size: 3.6rem;
+    line-height: 122%;
+    color: $color-blue;
+
+    @media only screen and (max-width: 768px) {
+      font-size: 21px;
+    }
+  }
+}
+
 .button {
   cursor: pointer;
   display: flex;
