--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,8 +2,13 @@ $c-gray: #eee;
 
 $color-blue: #05c2df;
 $color-black: #05040b;
+
 $color-grey-dark: #2f2f2f;
+$color-grey-dark-1:  #484848;
+
 $color-grey-light: #929292;
+$color-grey-light-1: #ababab;
+
 $color-white: #fff;
 
 $bg-gradient: linear-gradient(100.83deg, #191536 0.67%, #000 100%);
