--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1178,3 +1178,172 @@ body {
 }
 
 ////////////////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////////////
+/// WHY KAT LOCO
+
+.whykatloco {
+  padding: 160px 0;
+  background-image: linear-gradient(108.62deg, #191536 0%, #000 77.34%);
+
+  @media only screen and (max-width: 1280px) {
+    padding: 100px 0;
+  }
+
+  @media only screen and (max-width: 768px) {
+    padding: 70px 0;
+  }
+
+  @media only screen and (max-width: 320px) {
+    padding: 50px 0;
+  }
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+
+    padding: 0 34px;
+
+    @media only screen and (max-width: 320px) {
+      padding: 0 21px;
+    }
+  }
+
+  &__title {
+    margin-bottom: 82px;
+
+    @media only screen and (max-width: 768px) {
+      text-align: left;
+      margin-bottom: 32px;
+    }
+  }
+
+  &__list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    @media only screen and (max-width: 768px) {
+      justify-content: space-between;
+    }
+
+    @media only screen and (max-width: 690px) {
+      justify-content: center;
+    }
+  }
+
+  &__button {
+    display: none;
+    align-self: center;
+    margin-top: 40px;
+
+    @media only screen and (max-width: 1280px) {
+      display: block;
+    }
+
+    @media only screen and (max-width: 768px) {
+      display: none;
+    }
+  }
+}
+
+.list-whykatloco {
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-bottom: 50px;
+
+    &:not(:last-child) {
+      margin-right: 200px;
+    
+      @media only screen and (max-width: 1280px) {
+        margin-right: 5px;
+      }
+
+      @media only screen and (max-width: 768px) {
+        margin-right: 20px;
+      }
+    }
+
+    @media only screen and (max-width: 449px) {
+      margin: 0;
+
+      &:not(:last-child) {
+        margin-bottom: 50px;
+      }
+    }
+
+    @media only screen and (max-width: 320px) {
+      align-items: flex-start;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.item-whykatloco {
+  &__icon {
+    @media only screen and (max-width: 320px) {
+      display: none;
+    }
+  }
+
+  &__title {
+    &:not(:last-child) {
+      margin-bottom: 18px;
+
+      @media only screen and (max-width: 320px) {
+        margin-bottom: 11px;
+      }
+    }
+
+    &:not(:first-child) {
+      margin-top: 34px;
+
+      @media only screen and (max-width: 320px) {
+        margin-top: 0;
+      }
+    }
+
+    @media only screen and (max-width: 768px) {
+      font-weight: 900;
+      font-size: 16px;
+      line-height: 119%;
+    }
+  }
+
+  &__text {
+    max-width: 348px;
+    text-align: center;
+
+    @media only screen and (max-width: 768px) {
+      text-align: center;
+      max-width: 170px;
+      max-height: 74px;
+
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      display: -webkit-box;
+      -ms-box-orient: vertical;
+      -moz-box-orient: vertical;
+      -webkit-box-orient: vertical;
+      -ms-line-clamp: 3;
+      -moz-line-clamp: 3;
+      -webkit-line-clamp: 3;
+
+      &::after {
+        content: "...";
+        display: inline;
+      }
+
+      @media only screen and (max-width: 320px) {
+        max-width: 277px;
+        text-align: start;
+      }
+    }
+  }
+}
+
+////////////////////////////////////////////////////////////////////////////
