--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,6 +9,8 @@ $color-grey-dark-1:  #484848;
 $color-grey-light: #929292;
 $color-grey-light-1: #ababab;
 
+$color-brown: #860404;
+
 $color-white: #fff;
 
 $bg-gradient: linear-gradient(100.83deg, #191536 0.67%, #000 100%);
