section "get in touch" addapted to all resolutions

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -101,7 +101,9 @@ h3 {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 1.3rem 5.5rem;
+  padding: 0 55px;
+  padding-top: 12px;
+  padding-bottom: 14px;
   color: $color-white;
   background-color: $color-blue;
   border: none;
