--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1563,3 +1563,37 @@ body {
 }
 
 //////////////////////////////////////////////////////////////////////////////
+
+//////////////////////////////////////////////////////////////////////////////
+/// SCROLL UP BUTTON
+
+.scroll-up-button {
+  position: fixed;
+
+  cursor: pointer;
+
+  background: transparent;
+  border: none;
+
+  bottom: 305px;
+  right: 238px;
+
+  @media only screen and (max-width: 1280px) {
+    bottom: 201px;
+    right: 110px;
+  }
+
+  @media only screen and (max-width: 1110px) {
+    right: 15px;
+  }
+
+  @media only screen and (max-width: 550px) {
+    right: 0;
+  }
+
+  @media only screen and (max-width: 500px) {
+    display: none;
+  }
+}
+
+/////////////////////////////////////////////////////////////////////////////
