footer builded (not addapted)

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,13 +1,16 @@
 $c-gray: #eee;
 
 $color-blue: #05c2df;
+
 $color-black: #05040b;
+$color-black-1: #000;
 
 $color-grey-dark: #2f2f2f;
 $color-grey-dark-1:  #484848;
 
 $color-grey-light: #929292;
 $color-grey-light-1: #ababab;
+$color-grey-light-2: #f2f2f2;
 
 $color-brown: #860404;
 
