--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -413,6 +413,8 @@ body {
     font-weight: 500;
     font-size: 1.6rem;
     line-height: 130%;
+
+    color: $color-white;
   }
 }
 ////////////////////////////////////////////
@@ -565,7 +567,11 @@ body {
 .aboutus {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(146.86deg, #191536 -0.5%, #000 99.5%);
+  background-image: linear-gradient(
+    146.86deg, 
+    #191536 -0.5%, 
+    $color-black-1 99.5%
+  );
 
   padding-top: 147px;
   padding-bottom: 157px;
@@ -1184,7 +1190,11 @@ body {
 
 .whykatloco {
   padding: 160px 0;
-  background-image: linear-gradient(108.62deg, #191536 0%, #000 77.34%);
+  background-image: linear-gradient(
+    108.62deg, 
+    #191536 0%,
+    $color-black-1 77.34%
+  );
 
   @media only screen and (max-width: 1280px) {
     padding: 100px 0;
@@ -1597,3 +1607,46 @@ body {
 }
 
 /////////////////////////////////////////////////////////////////////////////
+
+/////////////////////////////////////////////////////////////////////////////
+/// FOOTER 
+
+.footer {
+  background-color: $color-black-1;
+
+  padding-top: 43px;
+  padding-bottom: 35px;
+
+  &__container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+}
+
+.navigation-footer {
+  &__list {
+    display: flex;
+    justify-content: space-between;
+
+    min-width: 306px;
+  }
+
+  &__link {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+
+    color: $color-grey-light-2;
+  }
+}
+
+.socials-footer {
+  &__link {
+    &:not(:first-child) {
+      margin-left: 28px;
+    }
+  }
+}
+
+////////////////////////////////////////////////////////////////////
