--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -41,6 +41,7 @@ h3 {
 }
 
 .section-title-centred {
+  @include hover(transform, skew(10deg));
   text-align: center;
 
   @media only screen and (max-width: 768px) {
@@ -61,6 +62,8 @@ h3 {
 }
 
 .section-title-custom {
+  @include hover(transform, skew(10deg));
+
   @media only screen and (max-width: 768px) {
     font-size: 21px;
   }
@@ -110,6 +113,14 @@ h3 {
   border-radius: 4px;
   outline: none;
 
-  @include hover(background-color, $color-white);
-  @include hover(color, $color-blue);
+  &:disabled {
+    cursor: not-allowed;
+    background-color: #191536;
+    color: $color-grey-dark;
+  }
+
+  &:not(:disabled) {
+    @include hover(background-color, $color-white);
+    @include hover(color, $color-blue);
+  }
 }
