--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -73,16 +73,20 @@ body {
     }
   }
 
-  &__logo-image {
-    width: 58px;
-    height: 12px;
-  }
-
   &__functionality {
+    height: 48px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     align-self: flex-start;
     margin-right: auto;
+
+    @media only screen and (max-width: 569px) {
+      height: 56px;
+    }
+
+    @media only screen and (max-width: 430px) {
+      height: 30px;
+    }
   }
 
   &__lang-switch {
@@ -126,30 +130,23 @@ body {
       }
 
       &::after {
-        top: 0;
+        top: 50%;
+        transform: translateY(-50%);
         right: 0;
         width: 29px;
         height: 13px;
-        border-top: 1px solid $color-white;
-        border-bottom: 1px solid $color-white;
-
-        @media only screen and (max-width: 430px) {
-          top: 6.5px;
-        }
+        border-top: 2px solid $color-white;
+        border-bottom: 2px solid $color-white;
       }
 
       &::before {
         background-color: $color-white;
         width: 20px;
-        height: 1px;
-        top: 6px;
+        height: 2px;
+        top: 50%;
         right: 0;
-        transform: translateX(-15.5px);
+        transform: translateX(-15.5px) translateY(-50%);
         z-index: 2;
-      
-        @media only screen and (max-width: 430px) {
-          top: 12.5px;
-        }
       }
     }
 
@@ -205,6 +202,8 @@ body {
   }
 
   &__background-image {
+    @include hover(transform, scale(0.9));
+
     position: absolute;
     right: 0;
     top: 0;
@@ -327,6 +326,7 @@ body {
   }
 
   &__more {
+    cursor: pointer;
     position: relative;
     font-weight: 500;
     font-size: 1.6rem;
@@ -335,6 +335,7 @@ body {
     color: $color-blue;
 
     &::after {
+      transition: all 0.5s;
       content: "";
       position: absolute;
       left: 50%;
@@ -343,6 +344,14 @@ body {
       @extend %triangle;
       transform: rotate(-180deg) translateX(50%);
     }
+
+    &:hover::after {
+      background-color: $color-white;
+      transform: rotate(-180deg) translateX(50%) translateY(-5px);
+    }
+
+    @include hover(color, $color-white);
+    @include hover(transform, scale(1.1));
   }
 }
 
@@ -357,7 +366,12 @@ body {
   }
 
   &__previous {
+    cursor: pointer;
     transform: translateX(-10.3rem);
+  }
+
+  &__next {
+    cursor: pointer;
   }
 
   &__border-grey {
@@ -384,8 +398,41 @@ body {
 .play-button {
   cursor: pointer;
 
+  align-self: flex-start;
+
+  background-color: transparent;
+  border: none;
+  color: #fff;
+
+  position: relative;
+
   display: flex;
   align-items: center;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 27px;
+    left: 26px;
+    z-index: 10000;
+    width: 20px;
+    height: 17px;
+    @extend %triangle;
+    transform: rotate(90deg);
+    background-color: $color-white;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+
+  &:hover {
+    &::after {
+      opacity: 1;
+    }
+
+    .play-button__text {
+      color: $color-blue;
+    }
+  }
 
   @media only screen and (max-width: 430px) {
     width: 221px;
@@ -397,6 +444,8 @@ body {
     font-size: 1.6rem;
     line-height: 130%;
     margin-left: -133px;
+
+    transition: color 0.3s;
   }
 }
 
@@ -504,6 +553,8 @@ body {
 
 .adventage {
   &__icon {
+    @include hover(transform, scale(1.1));
+
     margin-bottom: 21px;
 
     @media only screen and (max-width: 430px) {
@@ -692,6 +743,8 @@ body {
   }
   
   &__video {
+    @include hover(transform, scale(1.01));
+
     grid-area: video;
     width: 100%;
     height: 100%;
@@ -804,7 +857,12 @@ body {
     line-height: 150%;
   }
 
+  &__previous {
+    cursor: pointer;
+  }
+
   &__next {
+    cursor: pointer;
     transform: translateX(10.3rem);
   }
 
@@ -1051,8 +1109,16 @@ body {
   }
 
   &__device-image {
+    transition: all 0.3s;
     position: relative;
     z-index: 10;
+
+    &:hover {
+      outline: 2px solid $color-blue;
+      outline-offset: 20px;
+      border-radius: 50%;
+      scale: 1.05;
+    }
   }
 
   &__decorations {
@@ -1294,6 +1360,8 @@ body {
 
 .item-whykatloco {
   &__icon {
+    @include hover(transform, scale(1.1));
+
     @media only screen and (max-width: 320px) {
       display: none;
     }
@@ -1588,6 +1656,8 @@ body {
   bottom: 305px;
   right: 238px;
 
+  @include hover(filter,  hue-rotate(180deg) brightness(90%) saturate(120%));
+
   @media only screen and (max-width: 1280px) {
     bottom: 201px;
     right: 110px;
@@ -1731,6 +1801,14 @@ body {
   grid-area: socials;
 
   &__link {
+    padding: 5px;
+
+    text-decoration: none !important;
+
+    &:hover .socials-footer__image {
+      filter: contrast(1.2) saturate(1.5) brightness(0.6) hue-rotate(180deg);
+    }
+
     &:not(:first-child) {
       margin-left: 28px;
     }
@@ -1744,3 +1822,8 @@ body {
 }
 
 ////////////////////////////////////////////////////////////////////
+
+::selection {
+  background-color: $select-color;
+  color: $color-green;
+}
