--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -217,8 +217,6 @@ body {
 
     @media only screen and (max-width: 1080px) {
       width: 494px;
-      top: 50%;
-      transform: translateY(-50%);
     }
 
     @media only screen and (max-width: 700px) {
@@ -233,6 +231,20 @@ body {
       opacity: 1;
       width: 320px;
       height: 172px;
+    }
+
+    &--2 {
+      position: absolute;
+      right: 0;
+      top: 0;
+      display: none;
+    }
+
+    &--3 {
+      position: absolute;
+      right: 0;
+      top: 0;
+      display: none;
     }
   }
 
@@ -369,14 +381,15 @@ body {
   }
 
   &__previous {
-    cursor: pointer;
+    transition: all 0.3s;
+    color: $color-grey-dark-1;
+    cursor: default;
     transform: translateX(-10.3rem);
-    @include hover(color, $color-blue);
   }
 
   &__next {
+    transition: all 0.3s;
     cursor: pointer;
-    @include hover(color, $color-blue);
   }
 
   &__border-grey {
@@ -390,6 +403,7 @@ body {
   }
 
   &__border-blue {
+    transition: width 0.6s;
     position: absolute;
     width: 6.9rem;
     height: 1px;
@@ -533,8 +547,11 @@ body {
     justify-content: center;
     flex-wrap: wrap;
 
+    gap: 40px 20px;
+
     @media only screen and (max-width: 430px) {
       justify-content: flex-start;
+      gap: 20px 20px;
     }
   }
 
@@ -543,15 +560,8 @@ body {
     flex-direction: column;
     align-items: center;
 
-    margin-bottom: 40px;
-
     @media only screen and (max-width: 430px) {
       align-items: flex-start;
-      margin-bottom: 20px;
-    }
-
-    &:not(:last-child) {
-      margin-right: 20px;
     }
   }
 }
@@ -675,6 +685,7 @@ body {
     @media only screen and (max-width: 600px) {
       flex-direction: column-reverse;
       align-items: center;
+      display: none;
     }
 
     width: 100%;
@@ -733,7 +744,17 @@ body {
       }
     }
   }
-  
+
+  &__videos {
+    max-width: 622px;
+    min-width: 430px;
+    height: 290px;
+
+    @media only screen and (max-width: 768px) {
+      min-width: 340px;
+    }
+  }
+
   &__series-count {
     font-weight: 400;
     font-size: 1.4rem;
@@ -748,7 +769,7 @@ body {
   }
   
   &__video {
-    @include hover(transform, scale(1.01));
+    transition: all 0.5s;
 
     grid-area: video;
     width: 100%;
@@ -770,6 +791,16 @@ body {
 
     @media only screen and (max-width: 600px) {
       width: 100%;
+    }
+
+    &--2 {
+      display: none;
+      transform: translateY(-290px);
+    }
+
+    &--3 {
+      display: none;
+      transform: translateY(-580px);
     }
   }
   
@@ -834,6 +865,27 @@ body {
   }
 }
 
+.top-aboutus--600 {
+  display: none;
+
+  @media only screen and (max-width: 600px) {
+    display: flex;
+  }
+
+  padding: 0 20px;
+
+  h2 {
+    @media only screen and (max-width: 380px) {
+      align-self: flex-start;
+    }
+  }
+
+  p {
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+}
+
 .top-aboutus-dotted-slider {
   &__dot {
     border-radius: 50%;
@@ -863,14 +915,15 @@ body {
   }
 
   &__previous {
+    transition: all 0.3s;
+    color: $color-grey-dark-1;
     cursor: pointer;
-    @include hover(color, $color-blue);
   }
 
   &__next {
+    transition: all 0.3s;
     cursor: pointer;
     transform: translateX(10.3rem);
-    @include hover(color, $color-blue);
   }
 
   &__border-grey {
@@ -883,6 +936,7 @@ body {
   }
 
   &__border-blue {
+    transition: width 0.6s;
     position: absolute;
     width: 6.9rem;
     height: 1px;
@@ -1334,36 +1388,27 @@ body {
 }
 
 .list-whykatloco {
+  gap: 50px 200px;
+
+  @media only screen and (max-width: 1280px) {
+    gap: 50px 5px;
+  }
+    
+  @media only screen and (max-width: 768px) {
+    gap: 50px 20px;
+  }
+
+  @media only screen and (max-width: 320px) {
+    gap: 20px 20px;
+  }
+  
   &__item {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    margin-bottom: 50px;
-
-    &:not(:last-child) {
-      margin-right: 200px;
-    
-      @media only screen and (max-width: 1280px) {
-        margin-right: 5px;
-      }
-
-      @media only screen and (max-width: 768px) {
-        margin-right: 20px;
-      }
-    }
-
-    @media only screen and (max-width: 449px) {
-      margin: 0;
-
-      &:not(:last-child) {
-        margin-bottom: 50px;
-      }
-    }
-
     @media only screen and (max-width: 320px) {
       align-items: flex-start;
-      margin-bottom: 20px;
     }
   }
 }
@@ -1656,6 +1701,7 @@ body {
 /// SCROLL UP BUTTON
 
 .scroll-up-button {
+  display: none;
   position: fixed;
 
   cursor: pointer;
@@ -1833,7 +1879,64 @@ body {
 
 ////////////////////////////////////////////////////////////////////
 
+///////////////////////////////////////////////////////////////////
+/// ADDITIONAL
+
 ::selection {
   background-color: $select-color;
   color: $color-green;
 }
+
+#not-link {
+  text-decoration: none;
+}
+
+////////////////////////////////////////////////////////////////
+
+////////////////////////////////////////////////////////////////////
+/// FOR SLIDERS
+
+.pic-shown {
+  animation: picture-shown 0.9s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+.pic-hidden {
+  animation: picture-hidden 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes picture-shown {
+  0% {
+    display: none;
+    scale: 0;
+  }
+
+  60% {
+    display: block;
+  }
+
+  80% {
+    scale: 1.2;
+  }
+
+  100% {
+    scale: 1;
+  }
+}
+
+@keyframes picture-hidden {
+  from {
+    display: block;
+    scale: (1);
+  }
+
+  to {
+    display: none;
+    scale: (0);
+  }
+}
+
+////////////////////////////////////////////////////////////////////
